# ai-challenge-tte

./: .gitignore  README.md  attention_math.py  pyproject.toml
transaction_transformer_encoder/: trainer.py  transaction_transformer_pipeline.py
transaction_transformer_encoder/config/: base_config.py
transaction_transformer_encoder/data/: basket_dataset.py  batch_collator.py  dataflow_artifact_generator.py  vocab.py
transaction_transformer_encoder/transformer/: basket_item_encoder.py  masking.py  transaction_transformer_encoder.py
